crates/hir-ty/tests/snapshots/jls_raw_types__raw_functional_interface_sam_erased.snap
---
source: crates/hir-ty/tests/jls_raw_types.rs
expression: out
---
FILE /src/com/example/Raw.java:
package com.example;

import java.util.List;

interface F<T extends List<String>> {
    void accept(T t);
}

interface Sub<T extends List<String>> extends F<T> {
}

class Body {
    void m(Sub s) {
        Sub f = (p) -> {
            String a = p.get(0);
        };
    }
}

method m(com.example.Sub): void
  locals: l0: com.example.Sub | l1: com.example.Sub | l2: java.lang.String
  exprs: e0: int | e1: java.util.List | e2: java.lang.Object | e3: com.example.Sub
  diags: l1@13:12: raw-type-use: Raw use of parameterized class 'Sub' | e2@14:23: incompatible-types: Incompatible types. Found: 'Object', required: 'String'
