crates/hir-ty/tests/snapshots/jls_raw_types__raw_receiver_generic_super_field_erased.snap
---
source: crates/hir-ty/tests/jls_raw_types.rs
expression: out
---
FILE /src/com/example/Raw.java:
package com.example;

import java.util.List;

class Gen<T> {
    List<String> items;
}

class Sub<T> extends Gen<T> {
}

class Body {
    void m(Sub s) {
        for (String x : s.items) {
        }
    }
}

method m(com.example.Sub): void
  locals: l0: com.example.Sub | l1: java.lang.String
  exprs: e0: com.example.Sub | e1: java.util.List
  diags: e1@13:24: incompatible-types: Incompatible types. Found: 'Object', required: 'String'
