crates/hir-ty/tests/snapshots/jls_raw_types__raw_receiver_non_generic_declarer_behind_generic_intermediate.snap
---
source: crates/hir-ty/tests/jls_raw_types.rs
expression: out
---
FILE /src/com/example/Raw.java:
package com.example;

import java.util.List;

class Base {
    List<String> items() { return null; }
}

class Mid<T> extends Base {
}

class Sub<T> extends Mid<T> {
}

class Body {
    void m(Sub s) {
        for (String x : s.items()) {
        }
    }
}

method items(): java.util.List<java.lang.String>
  locals: 
  exprs: e0: null
method m(com.example.Sub): void
  locals: l0: com.example.Sub | l1: java.lang.String
  exprs: e1: com.example.Sub | e2: java.util.List<java.lang.String>
